Add spring autoconfiguration. Improve Logger helper class methods. Add header filtering. Add AOP integration to handle `@LogAround` annotations and Http requests in Controllers. Overall code improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,22 @@ target/
 *.iml
 *.ipr
 
+### Eclipse ###
+.settings/
+.project
+.classpath
+.factorypath
+!**/.project
+!**/.classpath
+!**/.factorypath
+!**/.settings/
+
 ### VS Code ###
 .vscode/
 
 ### Mac OS ###
 .DS_Store
 
+logs/
+!**/logs/
 *.log
