--- a/test/src/main/resources/wlogger.properties
+++ b/test/src/main/resources/wlogger.properties
@@ -1,5 +1,5 @@
-logging.mask.enabled=true
-logging.mask.fields=\
+wlogger.mask.enabled=true
+wlogger.mask.fields=\
   /string,\
   /testData/string,\
   /testDataList/#/bigDecimal,\
