--- a/masking-logger-api/pom.xml
+++ b/masking-logger-api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>me.maxhub.logger</groupId>
         <artifactId>masking-logger</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>masking-logger-api</artifactId>
@@ -27,6 +27,11 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.maxhub.logger</groupId>
+            <artifactId>masking-logger-core</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
