--- a/masking-logger-example/pom.xml
+++ b/masking-logger-example/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>test</artifactId>
+    <artifactId>masking-logger-example</artifactId>
     <packaging>jar</packaging>
 
     <name>test</name>
