feat(masker)!: implemented V2 JSON masker
This implementation makes use of Jackson's custom serializers to mask data at the serialization stage.

--- a/masking-logger-example/src/main/resources/application.yml
+++ b/masking-logger-example/src/main/resources/application.yml
@@ -4,12 +4,15 @@ wlogger:
   mask:
     enabled: true
     fields:
+      - /stringArray/#
       - /string
       - /testData/integer
       - /testDataList/#/bigDecimal
       - /testDataList/#/testDataList/#/integer
       - /stringList/#/
       - /password
+    default-masker: json
+    masker-version: v2
 
 spring:
   application:
