--- a/masking-logger-example/src/main/resources/wlogger.properties
+++ b/masking-logger-example/src/main/resources/wlogger.properties
@@ -1,4 +1,6 @@
 wlogger.mask.enabled=true
+wlogger.mask.default-masker=json
+wlogger.mask.masker-version=v2
 wlogger.mask.fields=\
   /string,\
   /testData/string,\
