--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>me.maxhub.logger</groupId>
     <artifactId>masking-logger</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <packaging>pom</packaging>
 
     <name>masking-logger</name>
@@ -15,6 +15,7 @@
         <module>masking-logger-autoconfig</module>
         <module>masking-logger-spring</module>
         <module>masking-logger-spring-boot-starter</module>
+        <module>masking-logger-annotations</module>
     </modules>
 
     <properties>
@@ -59,6 +60,11 @@
             <dependency>
                 <groupId>me.maxhub.logger</groupId>
                 <artifactId>masking-logger-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>me.maxhub.logger</groupId>
+                <artifactId>masking-logger-annotations</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
