feat: enhanced condition support
Introduced `Predicate` annotation to support complex condition evaluations.
Introduced an `ObjectMapper` customizer that allows to customize the objectMapper instance used by `JsonMaskerV2`. Mostly used to add mixins.

--- a/masking-logger-annotations/pom.xml
+++ b/masking-logger-annotations/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>me.maxhub.logger</groupId>
         <artifactId>masking-logger</artifactId>
-        <version>0.2.0</version>
+        <version>0.2.1</version>
     </parent>
 
     <artifactId>masking-logger-annotations</artifactId>
@@ -16,5 +16,12 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
