--- a/masking-logger-autoconfig/pom.xml
+++ b/masking-logger-autoconfig/pom.xml
@@ -11,7 +11,6 @@
     <packaging>jar</packaging>
 
     <name>masking-logger-autoconfig</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,6 +37,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
