--- a/maskers/pom.xml
+++ b/maskers/pom.xml
@@ -7,10 +7,10 @@
         <version>0.3.0</version>
     </parent>
 
-    <artifactId>masking-logger-autoconfig</artifactId>
+    <artifactId>maskers</artifactId>
     <packaging>jar</packaging>
 
-    <name>masking-logger-autoconfig</name>
+    <name>maskers</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,20 +18,23 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
-        <dependency>
             <groupId>me.maxhub.logger</groupId>
             <artifactId>masking-logger-core</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>me.maxhub.logger</groupId>
-            <artifactId>masking-logger-spring</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <dependency>
